added desktop main kt for run jvm